--- a/style.css
+++ b/style.css
@@ -14241,8 +14241,8 @@ fieldset[disabled] .page .btn-white-outline {
 
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=1.4.57");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=1.4.57") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=1.4.57") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=1.4.57") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=1.4.57") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=1.4.57#materialdesigniconsregular") format("svg");
+  src: url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.eot?v=1.4.57");
+  src: url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.eot?#iefix&v=1.4.57") format("embedded-opentype"), url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.woff2?v=1.4.57") format("woff2"), url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.woff?v=1.4.57") format("woff"), url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.ttf?v=1.4.57") format("truetype"), url("http://rawgit.com/vanphamh2/dienlanhbentre/gh-pages/materialdesignicons-webfont.svg?v=1.4.57#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
