--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -2,7 +2,7 @@
 text-align:justify;
 }h2.title{margin-top:0px}
 p.call{margin-bottom:5px}
-.call a{
+p.call a{
 	font-size:18px;
 	font-weight:bold;
 }
