--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -13,9 +13,9 @@ p.call a{
 	min-width: 520px;
 	height: 400px;
 	position: relative;
-	margin: 30px auto;
+	margin: 0px auto;
 	overflow: hidden;
-	background: transparent url(../images/waves.gif) repeat 0% 0%;
+	background: transparent url(https://1.bp.blogspot.com/-QNC20Tef4xA/WUJ0tEKeB2I/AAAAAAAABsw/7hP541oT-94DZBg_5KptYx7lSKV8xFT5wCLcBGAs/s1600/waves.gif) repeat 0% 0%;
 	border-top: 8px solid #efc34a;
 	border-bottom: 8px solid #efc34a;
 	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -2px 1px #fff;
