--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -706,17 +706,17 @@ p.call a{
 	color:#FFF;
 	font-size:18px;
 	margin-bottom:10px;
-	
+	font-weight:bold;
 }
 .copyright p.f-text{
 	color:#777;
 }
-.copyright .follow-by-email-address{
+.copyright .follow-by-email-address1{
 	    height: 40px;
     padding: 11px 32px 11px 19px;
     border-radius: 50px 0 0 50px;
 }
-.copyright .follow-by-email-submit{
+.copyright .follow-by-email-submit1{
 	
     min-width: 30px;
     padding: 8px 12px;
