--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -711,12 +711,12 @@ p.call a{
 .copyright p.f-text{
 	color:#777;
 }
-.copyright .follow-by-email-address1{
+.main-holder .copyright .follow-by-email-address1{
 	    height: 40px;
     padding: 11px 32px 11px 19px;
     border-radius: 50px 0 0 50px;
 }
-.copyright .follow-by-email-submit1{
+.main-holder .copyright .follow-by-email-submit1{
 	
     min-width: 30px;
     padding: 8px 12px;
