--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -702,7 +702,7 @@ p.call a{
 	70%{ left: 30%;  opacity: 0; }
 	100%{ left: -50%; opacity: 0; }
 }
-.copyright h5{
+.home .copyright h5{
 	color:#FFF;
 	font-size:18px;
 	margin-bottom:10px;
@@ -716,7 +716,7 @@ p.call a{
     padding: 11px 32px 11px 19px;
     border-radius: 50px 0 0 50px;
 }
-.main-holder .copyright .follow-by-email-submit1{
+.home .main-holder .copyright .follow-by-email-submit1{
 	
     min-width: 30px;
     padding: 8px 12px;
