--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -711,7 +711,7 @@ p.call a{
 .copyright p.f-text{
 	color:#777;
 }
-.main-holder .copyright .follow-by-email-address1{
+.home .main-holder .copyright .follow-by-email-address1{
 	    height: 40px;
     padding: 11px 32px 11px 19px;
     border-radius: 50px 0 0 50px;
