--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -733,7 +733,7 @@ p.call a{
 .home .main-holder .copyright .contact-f p{
 	margin-bottom:5px;
 }
-.fa-envelope {
+.fa-envelope:before {
 	margin: 3px 7px 3px 0;
     vertical-align: top;
     line-height: 20px;
