--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -720,7 +720,7 @@ p.call a{
 	
     min-width: 30px;
 	height:20px;
-    padding: 8px 12px;
+    padding: 5px 5px 5px 10px;
 	color: #fff;
     background-color: #42a4ff;
     border-color: #42a4ff;
