--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -726,7 +726,8 @@ p.call a{
     border-color: #42a4ff;
     -webkit-box-shadow: 0px 2px 10px 0px rgba(19, 108, 191, 0.31);
     box-shadow: 0px 2px 10px 0px rgba(19, 108, 191, 0.31);
-    font-size: 12px;
+    font-size: 14px;
+	font-weight:bold;
     line-height: 1.57143;
     border-radius: 0px 50px 50px 0px;
     letter-spacing: .02em;
