--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -770,3 +770,20 @@ p.call a{
 	right:15px;
 	top:15px;
 }
+.bs-callout-info {
+    border-left-color: #1b809e;
+}
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+.bs-callout-info h4 {
+    color: #1b809e;
+}
+.bs-callout h4 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
