--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -822,3 +822,8 @@ h3.page-header{
 	font-weight:bold;
 	margin-left:5px;
 }
+.bgt{
+	    background-image: url(https://livedemo00.template-help.com/wordpress_54988/wp-content/uploads/2015/03/parallax.jpg);
+    width: 1119px;
+    height: 603px;
+}
