--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -825,5 +825,6 @@ h3.page-header{
 .bgt{
 	    background-image: url(https://livedemo00.template-help.com/wordpress_54988/wp-content/uploads/2015/03/parallax.jpg);
     width: 1119px;
-    height: 603px;
+    height: 303px;
+	overflow:hidden;
 }
