--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -848,3 +848,20 @@ h3.page-header{
 	color:#e25249;
 
 }
+.title-box h2.title-box_primary{
+	position: relative;
+	background:#f9c001;
+	color:#FFF;
+}
+.title-box .bg-diamond-element{
+	position: absolute;
+    left: 50%;
+    bottom: 0;
+    -webkit-transform: translateX(-50%) translateY(50%) rotate(45deg);
+    transform: translateX(-50%) translateY(50%) rotate(45deg);
+    width: 30px;
+    height: 30px;
+    z-index: -2;
+    pointer-events: none;
+    background: #f9c001;
+}
