--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -853,6 +853,7 @@ h3.page-header{
 	background:#f9c001;
 	color:#FFF;
 	padding:0px;
+	margin-bottom:50px;
 }
 .title-box .bg-diamond-element{
 	position: absolute;
