--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -872,6 +872,6 @@ h3.page-header{
     line-height: 20px;
     font-family: FontAwesome;
     font-size: 22px;
-    color: #FFF;
+    color: #e25249;
     content: '\f098';		
 }
