--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -877,7 +877,8 @@ h3.page-header{
 
 }
 .hottop{
-	border-left:thin solid #292929;
+	border-left:thin solid #f2f2f2;
+	padding-right:10px;
 }
 .form-control{
 	display: block;
