--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -880,7 +880,7 @@ h3.page-header{
 	border-left:thin solid #CCC;
 	padding-left:10px;
 }
-.form-control{
+.home .form-control{
 	display: block;
     width: 100%;
     height: 34px;
