--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -909,3 +909,9 @@ h3.page-header{
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	color:#555;
 }
+.home h3.btn-success{
+	width:100%;
+	text-align:center;
+	font-size:24px;
+	padding:10px 0px 10px 0px;
+}
