--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -939,8 +939,11 @@ h3.page-header{
 	border:1px solid #e9eaed;
 	position:relative;
 }
+.cp-header .cp-img{
+	border-bottom:1px solid #e9eaed;
+}
 .cp-header .cp-title{
 	position:absolute;
 	left:20px;
-	top:-50px;
+	top:-5px;
 }
