--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -945,6 +945,10 @@ h3.page-header{
 .cp-header .cp-title{
 	position:absolute;
 	left:20px;
-	bottom:50px;
+	bottom:70px;
 	color:#FFF;
+}
+.cp-header .cp-title h1{
+	text-rendering: optimizelegibility;
+    text-shadow: 0 0 3px rgba(0,0,0,.8);
 }
