--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -946,7 +946,7 @@ h3.page-header{
 .cp-header .cp-title{
 	color:#FFF;
 	margin:10px;
-	min-height:315px;
+	padding-top:300px;
 	border-bottom:1px solid #e9eaed;
 }
 .cp-header .cp-title h1{
