--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -946,7 +946,7 @@ h3.page-header{
 .cp-header .cp-title{
 	color:#FFF;
 	margin:10px;
-	padding-top:300px;
+	padding-top:270px;
 	border-bottom:1px solid #e9eaed;
 }
 .cp-header .cp-title h1{
@@ -971,5 +971,5 @@ h3.page-header{
 	image-rendering: optimizeQuality;
     min-height: 100%;
     min-width: 100%;
-
+	background:url(new1.html)
 }
