--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -971,6 +971,7 @@ h3.page-header{
 	border: 1px solid;
     border-color: #e5e6e9 #dfe0e4 #d0d1d5;
     border-radius: 3px;
+	float:left;
 }
 .cp-menubar-left{
 	width:70%;
