--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -962,7 +962,7 @@ h3.page-header{
 	font-size:12px;
 	background:#f6f7f9;
 }
-.cp-menubar ul li{
+.home .cp-menubar ul li{
 	padding:5px;
 	display:inline-block;
 	border:thin solid #ced0d4;
