--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -957,8 +957,9 @@ h3.page-header{
 }
 .home .cp-menubar ul{
 	border-radius:2px;
-	width:80%;
+	width:95%;
 	margin:0px;
+	padding:0px;
 	font-size:12px;
 	background:#f6f7f9;
 }
@@ -998,6 +999,15 @@ i.fa-map-marker:before {
     color: #4267b2;
     font-size: 14px;
     margin-right: 10px;
+    font-style: normal;
+	line-height:24px;
+}
+i.fa-star:before {
+    font-family: FontAwesome;
+    content: "\f005";
+    color: #4267b2;
+    font-size: 14px;
+    margin-right: 5px;
     font-style: normal;
 	line-height:24px;
 }
