--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -974,12 +974,12 @@ h3.page-header{
 	
 }
 .cp-menubar{
+	background:#FFF;
 	clear:both;
-	width:100%;
-	border: 1px solid;
-    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	border: 1px solid #d0d1d5;
     border-radius: 3px;
 	float:left;
+	padding-top:10px;
 }
 .cp-menubar-left{
 	width:70%;
