--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -957,20 +957,19 @@ h3.page-header{
 }
 .home .cp-menubar ul{
 	border-radius:2px;
-	width:95%;
-	margin:0px;
+	width:100%;
+	margin:0px 0px 0px 10px;
 	padding:0px;
 	font-size:12px;
-	background:#f6f7f9;
 }
 .home .cp-menubar ul li{
-	padding:5px;
+	padding:0px;
 	display:inline-block;
 	border:thin solid #ced0d4;
 	text-align:left;
 	text-indent:5px;
 	font-weight:bold;
-
+	margin:0px;
 	
 }
 .cp-menubar{
