--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -963,13 +963,9 @@ h3.page-header{
 	font-size:12px;
 }
 .home .cp-menubar ul li{
-	padding:10px 0px 0px 0px;
 	display:inline-block;
 	border-right:thin solid #ced0d4;
-	border-top:thin solid #ced0d4;
-	border-bottom:thin solid #ced0d4;
 	text-align:left;
-	text-indent:5px;
 	font-weight:bold;
 	margin:0px;
 	
@@ -1015,7 +1011,7 @@ i.fa-star:before {
 }
 .cp-menubar-right span{
 	color:#42b72a;
-	font-size:11px;
+	font-size:12px;
 }
 .conf{
 	width:90%;
@@ -1023,3 +1019,4 @@ i.fa-star:before {
 	border:thin solid #CCC;
 	border-radius:3px;
 }
+aaaa
