--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -967,8 +967,13 @@ h3.page-header{
 	font-weight:bold;
 	margin:0px;
 	padding:5px 10px 5px 10px;
-	line-height:1.5em;
+	line-height:1.3em;
 	
+}
+.home .cp-menubar ul li:last-child{
+	border:0px;
+	text-align:center;
+	padding-top:5px;
 }
 .cp-menubar{
 	background:#FFF;
@@ -1020,5 +1025,6 @@ i.fa-star:before {
 	margin:auto;
 	border:thin solid #CCC;
 	border-radius:3px;
+	background:#f6f7f9;
 }
 aaaa
