--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -1136,5 +1136,7 @@ i.fa-mobile:before {
 }
 .styletour{
 	clear:both;
-	margin:10px 0px 10px 0px;
+	margin:30px 0px 10px 0px;
+	border:thin solid #CCC;
+	background:#FFF;
 }
