--- a/dulichstyle.css
+++ b/dulichstyle.css
@@ -1132,3 +1132,138 @@ i.fa-mobile:before {
 #amazingcarousel-7 .amazingcarousel-bullet-wrapper {
 	margin: 4px auto;
 }
+.comment{
+ clear:both;
+}
+.acticleTour h3, .comment h3, .slideTour h3{
+ margin-bottom:5px;
+ line-height:1.5em;
+}
+.acticleTour{
+ clear:both;
+ margin-top:30px;
+}
+.acticleTour hr, .comment hr, .slideTour hr{
+ margin-top:0px;
+}
+.acticleTour ul{
+ padding:0px;
+}
+.acticleTour ul li{
+ list-style:none;
+ display:block;
+ padding-bottom:10px;
+ margin-bottom:10px;
+ border-bottom:thin solid #f2f2f2;
+ float:left;
+ clear:left;
+}
+.acticleTour ul li .acticleI{
+ float:left;
+ padding-right:10px;
+ width:20%;
+}
+.acticleTour ul li .acticleC{
+ float:left;
+ width:78%;
+ vertical-align:top;
+}
+.acticleTour ul li .acticleC h4{
+ margin:0px 0px 10px 0px;
+ text-transform:capitalize;
+}
+.styleM{
+ background:#FFF;
+ border:thin solid #CCC;
+ margin-bottom:10px;
+ border-radius:5px;
+ padding:10px 0px 10px 0px;
+ font-size:12px;
+ font-weight:500px;
+}
+.styleM h6{
+ padding-left:12px;
+}
+.mContent{
+ padding-left:12px;
+ padding-right:12px;
+ line-height:1.7em;
+}
+
+.home .mContent p{
+  margin:0px;
+  color:#3b3b3b;
+  font-weight:500;
+  font-size:12px;
+}
+.styleM .fa{
+ font-family: FontAwesome;
+    color: #666;
+    font-size: 16px;
+    margin-right: 10px;
+    font-style: normal;
+    line-height: 20px;
+ width:20px;
+ height:20px;
+ text-align:center;
+ display:block;
+ float:left;
+}
+.fa-location-arrow:before{
+ content: "\f124";
+}
+.fa-level-down:before{
+ content: "\f149";
+}
+.fa-retweet:before{
+ content: "\f079";
+}
+.fa-info-circle:before{
+ content: "\f05a";
+}
+.fa-home:before{
+ content: "\f015";
+}
+.fa-clock-o:before{
+ content: "\f017";
+}
+.tourday{
+ font-size:10px;
+ padding:1px 3px 1px 3px;
+ border:thin solid #42b72a;
+ background:#42b72a;
+ text-transform:uppercase;
+ border-radius:3px;
+ color:#FFF;
+ font-weight:bold;
+ margin:3px 0px 0px 3px;
+}
+.home .service-box_body h4{
+	margin:0px 0px 10px 0px;
+}
+.service-box-contact i:before{
+	color: #39464f;
+	margin-right:5px;
+}
+
+.home .service-box .service-box_txt{
+	color:#3b3b3b;
+	margin-top:5px;
+}
+.service-box_body hr{
+	margin:0px;
+}
+.service-box-contact{
+	padding:3px 0px 3px 0px;
+}
+.service-box-contact a{
+	font-weight:600;
+}
+a.read{
+	float:right;
+}
+a.read small{
+	color:#3b3b3b;
+	font-weight:bold;
+	text-decoration:underline;
+}
